--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "create-react-class": "^15.5.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^4.1.1",
+    "react-router": "2.0.0",
     "react-router-dom": "^4.1.1",
     "webpack-dev-server": "^1.16.2"
   }
