--- a/package.json
+++ b/package.json
@@ -5,23 +5,35 @@
   "repository": "https://github.com/Aliaksandra-Parkhimchyk/auction-app.git",
   "author": "Aliaksandra-Parkhimchyk",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --history-api-fallback"
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "html-webpack-plugin": "^2.26.0",
-    "webpack": "^1.14.0"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.28.0",
+    "prettier": "^1.4.2",
+    "webpack": "^2.6.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "bootstrap": "^3.3.7",
     "create-react-class": "^15.5.3",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.2",
+    "material-ui": "^0.18.1",
+    "material-ui-image": "^1.3.1",
+    "node-sass": "^4.5.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-router": "2.0.0",
     "react-router-dom": "^4.1.1",
-    "webpack-dev-server": "^1.16.2"
+    "react-tap-event-plugin": "^2.0.1",
+    "sass-loader": "^6.0.5",
+    "url-loader": "^0.5.8",
+    "webpack-dev-server": "^2.4.5"
   }
 }
