--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
+    "immutable": "^3.8.1",
+    "loadash": "^0.0.1",
     "material-ui": "^0.18.1",
     "material-ui-image": "^1.3.1",
     "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
     "react-router": "2.0.0",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "sass-loader": "^6.0.5",
     "url-loader": "^0.5.8",
     "webpack-dev-server": "^2.4.5"
