--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack": "^2.6.1"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
     "create-react-class": "^15.5.3",
@@ -29,7 +30,8 @@
     "material-ui": "^0.18.1",
     "material-ui-image": "^1.3.1",
     "node-sass": "^4.5.3",
-    "react": "^15.5.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "2.0.0",
