--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
+    "immutability-helper": "^2.2.2",
     "immutable": "^3.8.1",
     "loadash": "^0.0.1",
     "material-ui": "^0.18.1",
