--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router": "2.0.0",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "react-validation": "^2.10.9",
     "redux": "^3.6.0",
     "sass-loader": "^6.0.5",
     "url-loader": "^0.5.8",
