--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.5.4",
+    "react-infinite-scroll": "^0.1.5",
+    "react-infinity": "^1.2.2",
     "react-redux": "^5.0.5",
     "react-router": "2.0.0",
     "react-router-dom": "^4.1.1",
