--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "material-ui": "^0.18.1",
     "material-ui-image": "^1.3.1",
     "node-sass": "^4.5.3",
+    "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.5.4",
