--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "react-validation": "^2.10.9",
     "redux": "^3.6.0",
+    "redux-form": "^7.0.0",
+    "redux-form-material-ui": "^4.2.0",
     "sass-loader": "^6.0.5",
     "url-loader": "^0.5.8",
     "webpack-dev-server": "^2.4.5"
