--- a/package.json
+++ b/package.json
@@ -25,28 +25,31 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
+    "http": "^0.0.0",
     "immutability-helper": "^2.2.2",
     "immutable": "^3.8.1",
     "loadash": "^0.0.1",
-    "material-ui": "^0.18.1",
+    "material-ui": "^0.18.0",
     "material-ui-image": "^1.3.1",
     "node-sass": "^4.5.3",
+    "node-static": "^0.7.9",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.5.4",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-infinite-scroll": "^0.1.5",
     "react-infinity": "^1.2.2",
-    "react-redux": "^5.0.5",
-    "react-router": "2.0.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "react-validation": "^2.10.9",
     "redux": "^3.6.0",
-    "redux-form": "^7.0.0",
+    "redux-form": "^6.7.0",
     "redux-form-material-ui": "^4.2.0",
     "sass-loader": "^6.0.5",
     "url-loader": "^0.5.8",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "ws": "^3.0.0"
   }
 }
