--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "add": "^2.0.6",
     "axios": "^0.16.2",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "bootstrap": "^3.3.7",
     "create-react-class": "^15.5.3",
     "css-loader": "^0.28.4",
@@ -35,9 +36,11 @@
     "node-static": "^0.7.9",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
+    "qwest": "^4.4.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-infinite-scroll": "^0.1.5",
+    "react-infinite-scroller": "^1.0.14",
     "react-infinity": "^1.2.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
