--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-infinite-scroll": "^0.1.5",
     "react-infinite-scroller": "^1.0.14",
     "react-infinity": "^1.2.2",
+    "react-payment": "^0.1.8",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.1.1",
@@ -52,6 +53,8 @@
     "redux-form-material-ui": "^4.2.0",
     "redux-infinite-scroll": "^1.0.9",
     "sass-loader": "^6.0.5",
+    "stripe": "^4.24.1",
+    "stripe.js": "^0.0.1",
     "url-loader": "^0.5.8",
     "webpack-dev-server": "^2.4.5",
     "ws": "^3.0.0"
