--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.1.1",
+    "react-stripe-elements": "^0.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "react-validation": "^2.10.9",
     "redux": "^3.6.0",
