--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.16.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "bootstrap": "^3.3.7",
+    "chai": "^4.1.2",
     "create-react-class": "^15.5.3",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -31,9 +32,11 @@
     "http": "^0.0.0",
     "immutability-helper": "^2.2.2",
     "immutable": "^3.8.1",
+    "jest": "^21.0.1",
     "loadash": "^0.0.1",
     "material-ui": "^0.18.0",
     "material-ui-image": "^1.3.1",
+    "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
     "node-static": "^0.7.9",
     "normalize.css": "^7.0.0",
