--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Aliaksandra-Parkhimchyk",
   "scripts": {
     "start": "webpack-dev-server --history-api-fallback",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "yarn test -- --watch"
   },
   "license": "MIT",
