--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-infinite-scroll": "^0.1.5",
     "react-infinite-scroller": "^1.0.14",
     "react-infinity": "^1.2.2",
+    "react-material-ui-form-validator": "^0.5.1",
     "react-payment": "^0.1.8",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
